WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300861
[WebVTT] Custom Caption Text Size Settings do not adjust cue font size
https://bugs.webkit.org/show_bug.cgi?id=300861
Summary
[WebVTT] Custom Caption Text Size Settings do not adjust cue font size
Jer Noble
Reported
2025-10-15 21:39:08 PDT
[WebVTT] Custom Caption Text Size Settings do not adjust cue font size
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-10-15 21:39:10 PDT
<
rdar://problem/162547969
>
Jer Noble
Comment 2
2025-10-15 21:47:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52448
EWS
Comment 3
2025-10-16 18:05:36 PDT
Committed
301681@main
(9bac85c317ff): <
https://commits.webkit.org/301681@main
> Reviewed commits have been landed. Closing PR #52448 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug