[WebVTT] Custom Caption Text Size Settings do not adjust cue font size rdar://162547969 https://bugs.webkit.org/show_bug.cgi?id=300861

Reviewed by Eric Carlson.

In 265596@main, VTTCue was updated to set a font-size property in the cue's
own style attribute. However, this style attribute did not propogate the font
size down to child elements that contained the cue text.

Rather than set the font-size as a per-element style attribute, move the font
size property into the <style> tag attached to the text track rendering area
along with all the other system-settings derived styles.

Test: media/track/track-user-stylesheet-cue-font-size.html

* LayoutTests/media/track/track-user-stylesheet-cue-font-size-expected.txt: Added.
* LayoutTests/media/track/track-user-stylesheet-cue-font-size.html: Added.
* Source/WebCore/html/shadow/MediaControlTextTrackContainerElement.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateDisplay):
(WebCore::MediaControlTextTrackContainerElement::updateActiveCuesFontSize):
* Source/WebCore/html/track/VTTCue.cpp:
(WebCore::VTTCueBox::applyCSSProperties):
* Source/WebCore/page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::CaptionUserPreferencesMediaAF::captionsFontSizeCSS const):
(WebCore::CaptionUserPreferencesMediaAF::captionsStyleSheetOverride const):
* Source/WebCore/page/CaptionUserPreferencesMediaAF.h:

Canonical link: https://commits.webkit.org/301681@main